test/pass/parse_expr_loop.ms
do {
  const x := 1;
};
