test/fail/parse_unclosed_block.ms
const x := do { 1; 2;
